# HYkumo-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
src/plugins/asmr/: __init__.py  config.py  data_source.py
src/plugins/echo/: __init__.py
src/plugins/test/: __init__.py
